@@ -122,6 +122,7 @@
 - (void)deleteForward:(id)sender;
 - (void)textViewDidChangeSelection: (NSNotification *) aNotification;
 - (void)textViewResized: (PTYTextView *) textView;
+- (void) tabViewWillRedraw: (NSNotification *) aNotification;
 
 
 // misc
