@@ -1,3 +1,7 @@
+2004-02-19  ujwal
+
+	* Forcing redraw when tabview is redrawn.
+
 2004-02-18  ujwal
 
 	* Fixed scrollUp crash in PTYTextView: drawRect.
